WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158177
Autocorrection makes it hard to type "doesn't" and to type @ in email addresses
https://bugs.webkit.org/show_bug.cgi?id=158177
Summary
Autocorrection makes it hard to type "doesn't" and to type @ in email addresses
Ryosuke Niwa
Reported
2016-05-27 22:02:24 PDT
Sometimes, spellchecker tries to correct a contraction before letters after ' is typed. Similarly, spellchecker can try to correct the username in an email address immediately after '@' is typed before waiting for more letters.
Attachments
Fixes the bug
(32.95 KB, patch)
2016-05-27 22:37 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Added radar numbers
(33.01 KB, patch)
2016-05-27 22:41 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(32.99 KB, patch)
2016-05-28 11:47 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-05-27 22:37:32 PDT
Created
attachment 280022
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2016-05-27 22:40:14 PDT
<
rdar://problem/20490862
> <
rdar://problem/24707954
>
Ryosuke Niwa
Comment 3
2016-05-27 22:41:05 PDT
Created
attachment 280023
[details]
Added radar numbers
Darin Adler
Comment 4
2016-05-28 09:31:01 PDT
Comment on
attachment 280023
[details]
Added radar numbers View in context:
https://bugs.webkit.org/attachment.cgi?id=280023&action=review
> Source/WebCore/editing/AlternativeTextController.cpp:343 > + const AutocorrectionAlternativeDetails* details = static_cast<const AutocorrectionAlternativeDetails*>(m_alternativeTextInfo.details.get());
Should use auto here so you don’t have to repeat the long type name twice.
> Source/WebCore/editing/htmlediting.h:218 > +bool isAmbiguousBoundaryCharacter(UChar character);
Should omit the argument name character here.
Ryosuke Niwa
Comment 5
2016-05-28 11:47:58 PDT
Created
attachment 280046
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2016-05-28 12:17:35 PDT
Comment on
attachment 280046
[details]
Patch for landing Clearing flags on attachment: 280046 Committed
r201490
: <
http://trac.webkit.org/changeset/201490
>
WebKit Commit Bot
Comment 7
2016-05-28 12:17:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug